# libmipex

./: .gitignore  CMakeLists.txt  README.md
src/: libmipex.cpp  libmipex.hpp  main.cpp
